--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -184,7 +184,11 @@
                 <TabControl  Margin="10,10,10,10" FocusVisualStyle="{x:Null}">
                     <mtr:MetroTabItem Header="Respiratory" Height="40">
                         <Grid Name="TabItem_Respiratory">
-                            <Grid Height="125" VerticalAlignment="Top" Margin="10,0,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100*"/>
+                                <ColumnDefinition Name="column_RespAnalysis" Width="475"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid Height="125" VerticalAlignment="Top" Margin="10,0,0.333,0" Grid.ColumnSpan="2">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="35"/>
                                     <RowDefinition Height="45"/>
@@ -218,16 +222,23 @@
                                 <Label Content="Duration" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5,0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2"/>
                                 <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding RespiratoryEDFNavigationEnabled}" Value="{Binding RespiratoryEDFDuration, Delay=700}" Minimum="{Binding RespiratoryEDFDurationMin}" Maximum="{Binding RespiratoryEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
                                 <ToggleButton Content="CONSTANT AXIS" Margin="10,6,10,6" Grid.Column="4" Grid.Row="2" IsEnabled="{Binding RespiratoryEDFNavigationEnabled}" IsChecked="{Binding RespiratoryUseConstantAxis}"/>
+                                <Button Content="Export" Margin="10,6,10,6" Height="30" VerticalAlignment="Bottom" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Grid.Column="4" Grid.Row="1"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
-                            <oxy:PlotView Background="Transparent" Margin="10,160,10,138" Model="{Binding RespiratorySignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
+                            <oxy:PlotView Name="Resp_Plot" Background="Transparent" Margin="10,160,10,10" Model="{Binding RespiratorySignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
 
-                            <Label Content="Analysis" FontSize="18" Height="32" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" Margin="10,0,0,106"/>
-                            <Button Content="Export" Margin="0,0,20,100" HorizontalAlignment="Right" Width="101" Height="30" VerticalAlignment="Bottom" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick"/>
-                            <Grid Height="106" VerticalAlignment="Bottom" Margin="0,0,10,0">
+                            <Label Content="Analysis" FontSize="18" Height="32" VerticalAlignment="Top" Margin="10,130,0,0" Grid.Column="1" HorizontalAlignment="Left" Width="139"/>
+                            <Grid Name="Resp_Analysis" Margin="10,160,10,10" Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="12"/>
+                                    <RowDefinition Height="40"/>
+                                    <RowDefinition Height="100"/>
+                                    <RowDefinition Height="40"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="70"/>
+                                    <ColumnDefinition Width="80"/>
                                     <ColumnDefinition Width="100*"/>
                                     <ColumnDefinition Width="100*"/>
                                     <ColumnDefinition Width="100*"/>
@@ -236,40 +247,46 @@
                                     <ColumnDefinition Width="100*"/>
                                     <ColumnDefinition Width="100*"/>
                                 </Grid.ColumnDefinitions>
+                                <!-- Epoch Selection -->
+                                <Label Content="Epoch" Margin="10,8,0,0" Height="33" VerticalAlignment="Top" Grid.Row="1"/>
+                                <ComboBox SelectedValue="{Binding RespiratoryAnalysisSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="3" Grid.Column="1" Height="33" VerticalAlignment="Top" Margin="5,4,56.333,0" Grid.Row="1"/>
                                 <!-- Label Column -->
-                                <Label Content="Mean" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top"/>
-                                <Label Content="% Var" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top"/>
+                                <Label Content="Mean" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
+                                <Label Content="% Var" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
                                 <!-- Breathing Rate -->
-                                <Label Content="Ttotal" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                                <TextBox Height="23" Margin="10,45,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryBreathingPeriodMean}" VerticalAlignment="Top" Grid.Column="1"/>
-                                <TextBox Height="23" Margin="10,74,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryBreathingPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="1"/>
+                                <Label Content="Ttotal" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryBreathingPeriodMean}" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryBreathingPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2"/>
                                 <!-- Inspiration Period -->
-                                <Label Content="Ti" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="2"/>
-                                <TextBox Height="23" Margin="10,45,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationPeriodMean}" VerticalAlignment="Top" Grid.Column="2"/>
-                                <TextBox Height="23" Margin="10,74,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="2"/>
+                                <Label Content="Ti" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationPeriodMean}" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2"/>
                                 <!-- Expiration Period -->
-                                <Label Content="Te" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="3"/>
-                                <TextBox Height="23" Margin="10,45,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryExspirationPeriodMean}" VerticalAlignment="Top" Grid.Column="3"/>
-                                <TextBox Height="23" Margin="10,74,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryExspirationPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="3"/>
+                                <Label Content="Te" VerticalAlignment="Top" Grid.Column="3" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExspirationPeriodMean}" VerticalAlignment="Top" Grid.Column="3" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExspirationPeriodCoeffVar}" VerticalAlignment="Top" Grid.Column="3" Grid.Row="2"/>
                                 <!-- Positive Peak Height -->
-                                <Label Content="+ Peak" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="4"/>
-                                <TextBox Height="23" Margin="10,45,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryPositivePeakMean}" VerticalAlignment="Top" Grid.Column="4"/>
-                                <TextBox Height="23" Margin="10,74,10,0" TextWrapping="Wrap" Text="{Binding RespiratoryPositivePeakCoeffVar}" VerticalAlignment="Top" Grid.Column="4"/>
+                                <Label Content="+Peak" VerticalAlignment="Top" Grid.Column="4" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryPositivePeakMean}" VerticalAlignment="Top" Grid.Column="4" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryPositivePeakCoeffVar}" VerticalAlignment="Top" Grid.Column="4" Grid.Row="2"/>
                                 <!-- Negative Peak Height -->
-                                <Label Content="- Peak" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Grid.Column="5"/>
-                                <TextBox Height="23" Margin="10,45,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryNegativePeakMean}" VerticalAlignment="Top" Grid.Column="5"/>
-                                <TextBox Height="23" Margin="10,74,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryNegativePeakCoeffVar}" VerticalAlignment="Top" Grid.Column="5"/>
+                                <Label Content="-Peak" VerticalAlignment="Top" Grid.Column="5" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryNegativePeakMean}" VerticalAlignment="Top" Grid.Column="5" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryNegativePeakCoeffVar}" VerticalAlignment="Top" Grid.Column="5" Grid.Row="2"/>
                                 <!-- Positive Peak Volume -->
-                                <Label Content="+ Volume" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Grid.Column="6"/>
-                                <TextBox Height="23" Margin="10,45,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationVolumeMean}" VerticalAlignment="Top" Grid.Column="6"/>
-                                <TextBox Height="23" Margin="10,74,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="6"/>
+                                <Label Content="+Vol" VerticalAlignment="Top" Grid.Column="6" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationVolumeMean}" VerticalAlignment="Top" Grid.Column="6" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryInspirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="6" Grid.Row="2"/>
                                 <!-- Negative Peak Volume -->
-                                <Label Content="- Volume" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Grid.Column="7"/>
-                                <TextBox Height="23" Margin="10,45,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeMean}" VerticalAlignment="Top" Grid.Column="7"/>
-                                <TextBox Height="23" Margin="10,74,9,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="7"/>
+                                <Label Content="-Vol" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
+                                <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeMean}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
+                                <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
+                                <!-- Change of Properties Plot -->
+                                <Label Name="RespSignalPropertiesPlotHeader" Content="Signal Properties"  Margin="10,17.333,0,0" Height="33"  VerticalAlignment="Top" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+                                <oxy:PlotView Name="RespSignalPropertiesPlot" Background="Transparent" Margin="10,10.333,10.333,10" Model="{Binding RespiratoryPropertiesSignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.ColumnSpan="8" Grid.Row="4"/>
                             </Grid>
 
-                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}"/>
+                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="623,271,163,271"/>
                         </Grid>
                     </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="EEG" HorizontalAlignment="Left" Margin="0,0,-0.333,0" Width="55" Height="41" VerticalAlignment="Top">
@@ -394,5 +411,6 @@
                 </TabControl>
             </mtr:MetroTabItem>
         </TabControl>
+        <Label Content="Epoch" Margin="10,20,1277.333,0" Height="33" VerticalAlignment="Top"/>
     </Grid>
 </mtr:MetroWindow>
