Renamed Tool got rid of diagnoser

--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Filter.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Filter.xaml
@@ -1,9 +1,9 @@
-﻿<Dialog:CustomDialog x:Class="SleepApneaDiagnoser.Dialog_Add_Filter"
+﻿<Dialog:CustomDialog x:Class="SleepApneaAnalysisTool.Dialog_Add_Filter"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SleepApneaDiagnoser"
+        xmlns:local="clr-namespace:SleepApneaAnalysisTool"
         mc:Ignorable="d"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"           
