--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/App.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SleepApneaDiagnoser.App"
+﻿<Application x:Class="SleepApneaAnalysisTool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SleepApneaDiagnoser"
+             xmlns:local="clr-namespace:SleepApneaAnalysisTool"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
