--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -3,12 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SleepApneaDiagnoser"
+        xmlns:local="clr-namespace:SleepApneaAnalysisTool"
         xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:ControlzEx="clr-namespace:ControlzEx;assembly=MahApps.Metro" x:Name="Active" x:Class="SleepApneaDiagnoser.MainWindow"
+        xmlns:ControlzEx="clr-namespace:ControlzEx;assembly=MahApps.Metro" x:Name="Active" x:Class="SleepApneaAnalysisTool.MainWindow"
         mc:Ignorable="d"
         Title="Sleep Apnea Analysis Tool" MinHeight="540" MinWidth="682" Height="768" Width="1366" Closing="Window_Closing" Loaded="Window_Loaded" StateChanged="Window_StateChanged" SizeChanged="Window_SizeChanged" WindowState="Maximized" TitleCaps="False" BorderBrush="{DynamicResource AccentColorBrush}" BorderThickness="1">
 
@@ -287,7 +287,7 @@
                                 <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
                             </Grid>
 
-                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="614,270,159,271" />
+                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Grid.ColumnSpan="2" />
                         </Grid>
                     </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="EEG" HorizontalAlignment="Left" Width="55" Height="41" VerticalAlignment="Top">
